# prospero

./: .dockerignore  .gitignore  Dockerfile  LICENSE  compose.yml  pyproject.toml
.github/workflows/: build_and_push_docker_image.yml
prospero/: __main__.py  config.py  db.py
prospero/schedule_scraper/: base.py  gavella.py  kerempuh.py  komedija.py  luda_kuca.py  teatar_exit.py
